# gadscli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-npm.yml
docs/: AUTHENTICATION.md  COMMANDS.md  DESIGN_DOCUMENT.md  DESIGN_DOCUMENT.rtf  EDITOR_AUTOMATION.md  GAQL.md  GETTING_STARTED.md
npm/gadscli/: package.json
scripts/: build-npm.sh  publish-npm.sh  test-editor-flags.sh  test-editor-live.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/auth/: developer_token.rs  mod.rs  oauth.rs  service_account.rs  token.rs
src/cli/: api_commands.rs  api_commands_ext.rs  api_commands_new.rs  editor_commands.rs  mod.rs
src/client/: http.rs  mod.rs  rate_limiter.rs  request.rs
src/commands/: account.rs  ad.rs  ad_group.rs  asset.rs  audience.rs  auth_cmd.rs  batch.rs  bidding.rs  budget.rs  campaign.rs  config_cmd.rs  conversion.rs  device.rs  editor_cmd.rs  editor_ops.rs  editor_read.rs  editor_read_ext.rs  editor_write.rs  field.rs  keyword.rs  keyword_exclude.rs  keyword_ideas.rs  keyword_list.rs  keyword_mutate.rs  label.rs  location.rs  mod.rs  negative_list.rs  recommendation.rs  report.rs  schedule.rs
src/editor/: binary.rs  csv_writer.rs  database.rs  mod.rs  types.rs
src/gaql/: builder.rs  mod.rs  parser.rs  templates.rs
src/helpers/: audit.rs  budget_check.rs  campaign_performance.rs  duplicate_keywords.rs  keyword_ideas.rs  mod.rs  quick_report.rs  search_terms.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs  yaml.rs
src/types/: batch.rs  common.rs  mod.rs  operations.rs  query.rs  resources.rs  responses.rs  (+1 more)
(+29 files in other folders)
