[package]
name = "gadscli"
version = "0.2.0"
edition = "2021"
description = "A CLI for the Google Ads API"
license = "MIT"

[lib]
name = "gadscli"
path = "src/lib.rs"

[[bin]]
name = "gadscli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Auth / encryption
aes-gcm = "0.10"
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
rand = "0.8"
zeroize = "1"
base64 = "0.22"
jsonwebtoken = "9"

# Terminal output
comfy-table = "7"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite (for Google Ads Editor integration)
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2"
tempfile = "3"

[dev-dependencies]
mockito = "1"
pretty_assertions = "1"
tempfile = "3"
